# polikit

./: .gitignore  CMakeLists.txt  README.md  set.toml
doc/: 0_update_log.md  2_ring_statistics.md
ext/toml-f/: CMakeLists.txt
src/: main.f90
src/basic/: data_types.f90  dynamic_data.f90  init.f90  logger.f90  omp_test.f90  precision.f90
src/func/: bad.f90  cluster.f90  d2min.f90  ha.f90  lpse.f90  neighbor_finder.f90  ox_classify.f90  poly_analysis.f90  qn.f90  rdf.f90  rings_simple.f90  tct.f90
src/io/: cli_parser.f90  conf_export.f90  conf_parser.f90  data_input.f90  exporter.f90  flags.f90  params.f90  parser.f90
test/: exported.dump  ga2o3_48k.data  ga2o3_test.data  ga2o3_test.dump  ga2o3_test.xyz  ga2o3_test_2.dump  test.f90
test/test_dir/: 0.xyz  10000.xyz  2000.xyz  4000.xyz  6000.xyz  8000.xyz
